# blog_hillel

./: .env.example  .envrc  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  README.rst  db.json  docker-compose.yml  requirements.txt  setup.cfg  setup.py
blog/: admin.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
blog/api/: permissions.py  serializers.py  urls.py  views.py
blog/fixtures/: data.json  db.json  seed_blog.json  seed_comment.json
blog/management/commands/: createdata.py
blog/migrations/: 0001_initial.py  0002_alter_blog_short_description.py  0002_auto_20210729_1016.py  0002_auto_20210730_1247.py  0002_rename_user_name_comment_username.py  0003_auto_20210729_1018.py  0003_contact.py  0004_blog_status.py  0005_remove_blog_status.py  0006_alter_blog_image.py  0007_blog_rating.py  0008_alter_blog_managers.py  0009_alter_blog_managers.py  0010_blog_status.py
blog/templates/: author_list.html  bloggers.html  blogs.html  comment.html  contact_form.html  index.html  post_create.html  post_detail.html  post_latest_posts.html  post_list.html  post_share.html  post_update_page.html  user_detail.html  user_list.html
blog/templatetags/: blog_tags.py
blog_hillel/apps/: __init__.py
blog_hillel/apps/articles/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py
blog_hillel/apps/articles/migrations/: 0001_initial.py  0002_alter_blog_image.py  0003_alter_blog_image.py  0004_alter_blog_image.py
blog_hillel/apps/articles/templates/articles/: comment.html  index.html  post_create.html  post_detail.html  post_list.html  post_share.html  post_update_page.html  user_list.html
blog_hillel/apps/articles/templatetags/: blog_tags.py
blog_hillel/apps/articles/views/: __init__.py  article.py
blog_hillel/apps/users/: apps.py  urls.py  views.py
blog_hillel/apps/users/templates/users/: user_detail.html  user_list.html
blog_hillel/asgi/: __init__.py  dev.py
blog_hillel/settings/: __init__.py  base.py  dev.py
blog_hillel/static/css/: styles.css
blog_hillel/static/js/: contact_modal.js  main.js
blog_hillel/templates/: base.html
blog_hillel/templates/blog_hillel/includes/: contact.html  pagination.html
blog_hillel/templates/blog_hillel/registration/: register.html
blog_hillel/templates/registration/: password_reset_confirm.html  password_reset_done.html  password_reset_form.html  update_profile.html
blog_hillel/urls/: __init__.py  base.py  dev.py
blog_hillel/wsgi/: __init__.py  dev.py
config/nginx/conf.d/: dev.conf
core/: celery.py  settings.py  urls.py
media/: .gitkeep
static/: .gitkeep
static/css/: styles.css
templates/: base_generic.html
templates/includes/: contact.html
templates/registration/: logged_out.html  login.html
tmp/: .gitkeep
