# setup.cfg


[metadata]
name = blog_hillel
python_requires = 3.10.2
license = UNLICENSED


[options]
zip_safe = False
zip_ok = False
install_requires =
    Django==3.2.6
    django-environ==0.8.1


[options.extras_require]
dev =
    amqp==5.0.6
    backcall==0.2.0
    bandit==1.7.4
    billiard==3.6.4.0
    black==22.3.0
    celery==5.0.0
    certifi==2021.5.30
    cffi==1.14.6
    charset-normalizer==2.0.4
    click-didyoumean==0.0.3
    click-plugins==1.1.1
    click-repl==0.2.0
    coreapi==2.3.3
    coreschema==0.0.4
    crontab==0.23.0
    cryptography==3.4.7
    decorator==5.0.9
    defusedxml==0.7.1
    django-celery-beat==2.2.1
    django-celery-results==2.2.0
    django-debug-toolbar==3.2.1
    django-extensions==3.1.3
    django-markdown==0.8.4
    django-templated-mail==1.1.1
    django-timezone-field==4.2.1
    django-widget-tweaks==1.4.8
    djangorestframework==3.12.4
    Faker==8.11.0
    flake8==3.9.2
    flake8-builtins==1.5.3
    flake8-django==1.1.2
    flake8-import-order==0.18.1
    flake8-print==4.0.0
    idna==3.2
    inflection==0.5.1
    ipython==7.26.0
    ipython-genutils==0.2.0
    itypes==1.2.0
    jedi==0.18.0
    Jinja2==3.0.1
    kombu==5.1.0
    Markdown==3.3.4
    MarkupSafe==2.0.1
    matplotlib-inline==0.1.2
    mccabe==0.6.1
    oauthlib==3.1.1
    parso==0.8.2
    pexpect==4.8.0
    pickleshare==0.7.5
    prompt-toolkit==3.0.19
    ptyprocess==0.7.0
    pycodestyle==2.7.0
    pycparser==2.20
    pyflakes==2.3.1
    Pygments==2.9.0
    python-crontab==2.5.1
    python-dateutil==2.8.2
    python3-openid==3.2.0
    pytz==2021.1
    requests==2.26.0
    requests-oauthlib==1.3.0
    six==1.16.0
    sqlparse==0.4.1
    text-unidecode==1.3
    traitlets==5.0.5
    uritemplate==3.0.1
    urllib3==1.26.6
    vine==5.0.0
    wcwidth==0.2.5
    psycopg2-binary==2.9.2
    dj-rest-auth==2.1.11
    django-allauth==0.44.0
    djangorestframework-simplejwt==4.7.2
    isort==5.10.1




[bandit]
skips = B507
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B323,B324,B325,B401,B402,B403,B404,B405,B406,B407,B408,B409,B410,B411,B412,B413,B501,B502,B503,B504,B505,B506,B601,B602,B603,B604,B605,B606,B607,B608,B609,B610,B611,B701,B702,B703


[isort]
balanced_wrapping = True
combine_as_imports = True
default_section = FIRSTPARTY
force_grid_wrap = 0
force_sort_within_sections = True
force_to_top = True
include_trailing_comma = True
known_first_party = blog_hillel
line_length = 88
lines_after_imports = 2
length_sort = True
multi_line_output = 3
use_parentheses = True
virtual_env = $VIRTUAL_ENV
known_third_party =django,setuptools,environ